--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "monaco-editor": "^0.44.0",
     "nuxt": "^3.8.2",
+    "nuxt-monaco-editor": "^1.2.3",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   }
